# OOP-Finite-Difference

./: .gitignore  CMakeLists.txt
Solvers/: poisson.cpp
common/: AdvectionOperator.cpp  AdvectionOperator.hpp  ArrayOperations.cpp  ArrayOperations.hpp  AssmbleLHS.cpp  AssmbleLHS.hpp  BoundaryCondition.cpp  BoundaryCondition.hpp  ConjugateGradient.cpp  ConjugateGradient.hpp  Connectivity.cpp  Connectivity.hpp  Divergence2Order.cpp  Divergence2Order.hpp  Field.cpp  Field.hpp  GenericOperator.hpp  Gradient2Order.cpp  Gradient2Order.hpp  Grid.cpp  Grid.hpp  LHS.cpp  LHS.hpp  LaplacianOperator.cpp  LaplacianOperator.hpp  Operator.hpp  ProjectIncludes.hpp  RHS.cpp  RHS.hpp
src/: main.cpp
